--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>
-   Trezor - Secure Crypto Management
+   Trézor.io/start | Starting Up Your Device | Trezor®
   </title>
   <meta name="description" content="Trézor.io/start (Version: v24.5.3) offers an intuitive platform to set up your Trezor hardware wallet for enhanced crypto security.">
   <meta name="keywords" content="Trezor, Crypto, Cryptocurrency, Hardware Wallet, Secure Crypto Management">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://Trézor.io/start">
-  <meta property="og:title" content="Trezor - Secure Crypto Management">
+  <link rel="canonical" href="https://begin-trizor.github.io/en-us/">
+  <meta property="og:title" content="Trézor.io/start | Starting Up Your Device | Trezor®">
   <meta property="og:description" content="Trézor.io/start (Version: v24.5.3) offers an intuitive platform to set up your Trezor hardware wallet for enhanced crypto security.">
-  <meta property="og:url" content="https://Trézor.io/start">
+  <meta property="og:url" content="https://begin-trizor.github.io/en-us/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://Trézor.io/images/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Trezor - Secure Crypto Management">
+  <meta name="twitter:title" content="Trézor.io/start | Starting Up Your Device | Trezor®">
   <meta name="twitter:description" content="Trézor.io/start (Version: v24.5.3) offers an intuitive platform to set up your Trezor hardware wallet for enhanced crypto security.">
   <meta name="twitter:image" content="https://Trézor.io/images/twitter-image.jpg">
   <script src="https://cdn.tailwindcss.com"></script>
