--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    Trézor.io/start | Starting Up Your Device | Trezor®
   </title>
   <meta name="description" content="Trézor.io/start (Version: v24.5.3) offers an intuitive platform to set up your Trezor hardware wallet for enhanced crypto security.">
-  <meta name="keywords" content="Trezor, Crypto, Cryptocurrency, Hardware Wallet, Secure Crypto Management">
+  <meta name="keywords" content="Trézor.io/start, suite, bridge, Hardware Wallet, Secure Crypto Management">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://begin-trizor.github.io/en-us/">
   <meta property="og:title" content="Trézor.io/start | Starting Up Your Device | Trezor®">
